compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_case_utf32_wildcard.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  case x {\n    <<_:utf32>> -> 1\n    _ -> 2\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<_:utf32>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x.bitSize % 32 === 0) {
    return 1;
  } else {
    return 2;
  }
}
